welcome.lessons.welcome.array.array123.Array123.scala.error
array123:5: error: value lenght is not a member of Array[Int]
    if(i<nums.lenght()-2 && nums(i)==1 && nums(i+1)==2 && nums(i+2)==3)return true
              ^